# daemon-rs

./: .travis.yml  Cargo.toml  Jenkinsfile  README.md  aliases.js  appveyor.yml  search-index.js
daemon/: all.html  declare_singleton.m.html  index.html  macro.declare_singleton.html  sidebar-items.js
daemon/daemon/: Daemon.t.html  DaemonRunner.t.html  enum.State.html  index.html  sidebar-items.js  struct.Daemon.html  trait.DaemonRunner.html
daemon/linux/: index.html
example/: all.html  index.html
implementors/core/clone/: trait.Clone.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/daemon/daemon/: trait.DaemonRunner.js
jenkins/: Dockerfile
src/: daemon.rs  demon.rs  lib.rs  linux.rs  posix.rs  singleton.rs  windows.rs
src/daemon/: daemon.rs.html  lib.rs.html  linux.rs.html  singleton.rs.html
src/example/: example.rs.html
