[package]
name = "daemon"
license = "MIT"
version = "0.0.6"
description = "Library for creating simple Linux demons and Windows services."
authors = [ "Artem V. Navrotskiy <bozaro@users.noreply.github.com>" ]
repository = "https://github.com/bozaro/daemon-rs"
documentation = "https://bozaro.github.io/daemon-rs/daemon/"

[dependencies]
libc = "*"

[target.x86_64-pc-windows-gnu.dependencies]
advapi32-sys = "0.1"
kernel32-sys = "0.1"
winapi = "0.2"

[target.i686-pc-windows-gnu.dependencies]
advapi32-sys = "0.1"
kernel32-sys = "0.1"
winapi = "0.2"

[target.x86_64-pc-windows-msvc.dependencies]
advapi32-sys = "0.1"
kernel32-sys = "0.1"
winapi = "0.2"

[target.i686-pc-windows-msvc.dependencies]
advapi32-sys = "0.1"
kernel32-sys = "0.1"
winapi = "0.2"
