[package]
name = "daemon"
license = "MIT"
version = "0.0.7"
description = "Library for creating simple Linux demons and Windows services."
authors = [ "Artem V. Navrotskiy <bozaro@users.noreply.github.com>" ]
repository = "https://github.com/bozaro/daemon-rs"
documentation = "https://bozaro.github.io/daemon-rs/daemon/"

[dependencies]
libc = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "consoleapi", "winsvc" ] }
